--- a/e-Commerce/package.json
+++ b/e-Commerce/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.1",
+    "framer-motion": "^11.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "tailwindcss": "^3.4.3"
